--- a/themes/blackwork/layouts/partials/head.html
+++ b/themes/blackwork/layouts/partials/head.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Girassol" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus&family=Girassol" rel="stylesheet">
 
 {{ with resources.Get "favicon.ico" }}
   <link rel="icon" type="image/x-icon" href="{{.Permalink}}">
