--- a/themes/blackwork/assets/css/main.css
+++ b/themes/blackwork/assets/css/main.css
@@ -66,6 +66,15 @@ blockquote {
 }
 
 .singlecolumn {
+  max-width: 50rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  text-align: center;  
+  column-count: 1;
+}
+
+.dualcolumn {
   max-width: 70rem;
   margin-left: auto;
   margin-right: auto;
@@ -206,7 +215,7 @@ white-space:nowrap;
     display: none;
   }
 
-  .singlecolumn {
+  .dualcolumn {
     column-count: 1;
   }
 }
@@ -218,7 +227,7 @@ white-space:nowrap;
     width: 100%;
   }
 
-  .singlecolumn {
+  .dualcolumn {
     column-count: 2;
   }
 }
@@ -231,7 +240,7 @@ white-space:nowrap;
   }
 
 
-  .singlecolumn {
+  .dualcolumn {
     column-count: 2;
   }
 }
